# fastest-lap

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: codecov_linux.yml  linux.yml  macos.yml  valgrindtest.sh  windows.yml
cmake/: Doxygen.cmake  compilerflags.cmake  get-third-party.cmake  matlabutils.cmake  python.cmake
cmake/doxygen/: Doxyfile.in
cmake/patch/: ipopt.patch  matplotlibcpp.patch
database/: catalunya-polyseg.xml  catalunya.xml  catalunya_adapted.xml  catalunya_discrete.xml  catalunya_discrete_1000.xml  limebeer-2014-f1.xml  mercedes-2020-catalunya.xml  ovaltrack.xml  roberto-lot-kart-2016-rear-axle.xml  roberto-lot-kart-2016.xml  vendrell.xml
database/google_earth/: Catalunya_right.kml  Catalunya_right.kmz  Museo_short_left.kml  Museo_short_right.kmz  vendrell_left.kml
database/tracks/: README.md
database/tracks/arezzo/: arezzo.xml  arezzo_3d.xml  arezzo_left.kml  arezzo_left_3d.kml  arezzo_right.kml  arezzo_right_3d.kml  circuit_preprocessor.ipynb
database/tracks/catalunya/: Catalunya_left.kml  Catalunya_left.kmz  Catalunya_right.kml  Catalunya_right.kmz  catalunya.xml  catalunya_3d.xml  catalunya_adapted.xml  catalunya_discrete_1000.xml  catalunya_left.kml  catalunya_right.kml
database/tracks/catalunya_2022/: catalunya_2022.xml  catalunya_2022_3d.xml  catalunya_2022_left.kml  catalunya_2022_left.kmz  catalunya_2022_left_with_elevation.kml  catalunya_2022_right.kml  catalunya_2022_right.kmz  catalunya_2022_right_with_elevation.kml
database/tracks/cecina/: cecina.xml  cecina_3d.xml  cecina_left.kml  cecina_left_3d.kml  cecina_right.kml  cecina_right_3d.kml  circuit_preprocessor.ipynb
database/tracks/fa_museo/: Museo_short_right.kml
database/tracks/franciacorta_kart/: FranciacortaKarting_left.kml  FranciacortaKarting_left_3d.kml  FranciacortaKarting_right.kml  FranciacortaKarting_right_3d.kml  Franciacorta_karting.xml  Franciacorta_karting_3d.xml  circuit_preprocessor.ipynb
database/tracks/hungaroring/: README.md  hungaroring.ipynb  hungaroring.xml  hungaroring_left.kml  hungaroring_right.kml
database/tracks/imola/: imola.xml  imola_left.kml  imola_left.kmz  imola_right.kml  imola_right.kmz
database/tracks/jarama/: README.md  jarama.ipynb  jarama.xml  jarama_left.kml  jarama_right.kml
database/tracks/la-ferte-gaucher/: la-ferte-gaucher-left.kmz  la-ferte-gaucher-right.kml  la-ferte-gaucher-right.kmz  la-ferte-gaucher.xml
database/tracks/laguna_seca/: laguna_seca_3d.xml  laguna_seca_left.kml  laguna_seca_right.kml
database/tracks/lavelanet_karting/: karting_lavelanet_race_track_left.kml  lavelanet_karting.xml  (+1 more)
docs/: README.md
docs/doxygen/: html_footer.html
docs/models/: differentiate.m  grad.m  linearize.m  lot2015-kart.m
docs/source/: blog_USGP_tech_bits.rst  conf.py  functions.rst  index.rst  installation.rst  lift_and_coast.rst  overview.rst  quickstart.rst  variable_types.rst
examples/cpp/: plan.xml
examples/matlab/: gg_diagram.m
examples/python/: fastest_lap.py  fastest_lap_utils.py
projects/2022-Australia/: launcher_make_video.m  launcher_optimization.m  run_fastest_lap.m
projects/2022-Imola/: launcher_make_video.m  run_fastest_lap_imola.m
scripts/linux/: Dockerfile  run_docker.sh
src/: CMakeLists.txt
src/main/: CMakeLists.txt
src/main/c/: CMakeLists.txt  fastestlapc.cpp  fastestlapc.h  test.m
src/main/cpp/: CMakeLists.txt  main.cpp
src/main/matlab/: CMakeLists.txt  compile.m  fastestlap_default_options.m  optimal_acceleration.m  plot_circuit.m  plot_f1.m  plot_run_dashboard.m  plot_run_dashboard_v2.m  rear_axle_mex.cpp
src/scripts/: valgrind.sh
src/test/: CMakeLists.txt  main.cpp
src/test/actuators/: engine_test.cpp
src/test/actuators/data/: kart-sample.xml
src/test/applications/: circuit_preprocessor_test.cpp  compare_laptime_simulations.m  f1_optimal_laptime_test.cpp  f1_sensitivity_analysis.cpp  f1_steady_state_test.cpp  minimum_curvature_path.cpp  optimal_laptime_test.cpp  steady_state_ad_test.cpp  steady_state_f1_test.cp  steady_state_test.cpp
src/test/applications/data/: Museo_short_left.kmz  catalunya-polyseg.xml  catalunya_adapted.xml  catalunya_adapted_by_coords.xml  catalunya_chicane_discrete.xml  catalunya_derivative.xml  catalunya_derivative_throttle.xml  catalunya_ds_distribution.xml  f1_maximum_acceleration.xml  f1_optimal_laptime_catalunya_2022_3d.xml  f1_optimal_laptime_catalunya_3d.xml  f1_optimal_laptime_catalunya_adapted.xml  f1_optimal_laptime_catalunya_boost.xml  f1_optimal_laptime_catalunya_chicane.xml  f1_optimal_laptime_catalunya_chicane_derivative.xml  f1_optimal_laptime_catalunya_discrete.xml  f1_optimal_laptime_catalunya_discrete_with_wheel_inertia.xml  f1_optimal_laptime_catalunya_engine_energy_limited.xml  f1_optimal_laptime_catalunya_polyseg.xml  f1_optimal_laptime_catalunya_tire_energy_limited.xml  f1_optimal_laptime_catalunya_variable_parameter.xml  f1_optimal_laptime_imola_adapted.xml  f1_optimal_laptime_laguna_seca_3d.xml  f1_optimal_laptime_melbourne_700.xml  f1_optimal_laptime_melbourne_700_derivative.xml  f1_optimal_laptime_melbourne_700_direct.xml  f1_ovaltrack_closed.xml  f1_ovaltrack_open.xml  f1_steady_state_test.xml  minimum_curvature_path.xml  minimum_path_catalunya_2022.xml  minimum_path_catalunya_2022_3d.xml  museo_short_discrete.xml  optimal_laptime.xml  optimal_laptime_catalunya_discrete.xml  ovaltrack.xml  ovaltrack_derivative.xml  steady_state.xml  straight.xml  vendrell_optimal.xml
src/test/chassis/: CMakeLists.txt  axle_car_3dof_test.cpp  axle_car_test.cpp  chassis_car_3dof_3d_test.cpp  chassis_car_3dof_test.cpp  chassis_car_test.cpp  helper_functions.h
src/test/tire/: kappa_and_lambda.cpp  maximum_forces_test.cpp_  tire_pacejka_simple.cpp
src/test/vehicles/: car_road_cartesian.cpp  car_road_curvilinear.cpp  limebeer2014f1_test.cpp  powered_axle_test.cpp  track_by_polynomial_test.cpp
src/test/vehicles/data/: dummy-f1.xml  f1_optimal_laptime_catalunya_discrete.xml  f1_optimal_laptime_catalunya_discrete_with_wheel_inertia.xml  saved_results.xml
(+200 files in other folders)
